--- a/index.html
+++ b/index.html
@@ -1,408 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            overflow-x: hidden;
-        }
-
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            padding: 1rem 0;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #6366f1;
-        }
-
-        section {
-            min-height: 100vh;
-            padding: 6rem 2rem 4rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            animation: fadeInUp 0.8s ease-out;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            margin-bottom: 2rem;
-            opacity: 0.9;
-            animation: fadeInUp 0.8s ease-out 0.2s both;
-        }
-
-        .cta-button {
-            display: inline-block;
-            padding: 1rem 2.5rem;
-            background: white;
-            color: #667eea;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: 600;
-            transition: transform 0.3s, box-shadow 0.3s;
-            animation: fadeInUp 0.8s ease-out 0.4s both;
-        }
-
-        .cta-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        h2::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 4px;
-            background: #667eea;
-            border-radius: 2px;
-        }
-
-        .about-content {
-            max-width: 800px;
-            text-align: center;
-            font-size: 1.1rem;
-            line-height: 1.8;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 2rem;
-            max-width: 900px;
-            width: 100%;
-        }
-
-        .skill-card {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .skill-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
-        }
-
-        .skill-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            width: 100%;
-        }
-
-        .project-card {
-            background: white;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
-        }
-
-        .project-image {
-            width: 100%;
-            height: 200px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-        }
-
-        .project-content {
-            padding: 1.5rem;
-        }
-
-        .project-content h3 {
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-
-        .contact-form {
-            max-width: 600px;
-            width: 100%;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 1rem;
-            border: 2px solid #e5e7eb;
-            border-radius: 10px;
-            font-family: inherit;
-            font-size: 1rem;
-            transition: border-color 0.3s;
-        }
-
-        .form-group input:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: #667eea;
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            min-height: 150px;
-        }
-
-        .submit-btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 1rem 3rem;
-            border: none;
-            border-radius: 50px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .submit-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
-        }
-
-        #about { background: #f9fafb; }
-        #projects { background: #f9fafb; }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-            }
-
-            nav ul {
-                gap: 1rem;
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+
+<body class="font-[Inter] bg-white text-gray-900">
+  <div class="flex min-h-screen">
+
+    <!-- Sidebar -->
+    <aside class="w-20 md:w-56 bg-black text-white flex flex-col items-center md:items-start p-4 fixed h-full">
+      <div class="w-10 h-10 rounded-full bg-red-500 mb-6"></div>
+      <h2 class="hidden md:block text-lg font-semibold mb-10">Egbuna David</h2>
+      <nav class="space-y-6 text-sm">
+        <a href="#home" class="block opacity-80 hover:opacity-100">Home</a>
+        <a href="#about" class="block opacity-80 hover:opacity-100">About</a>
+        <a href="#projects" class="block opacity-80 hover:opacity-100">Projects</a>
+        <a href="#blog" class="block opacity-80 hover:opacity-100">Blog</a>
+        <a href="#photos" class="block opacity-80 hover:opacity-100"></a>
+        <a href="#contact" class="block opacity-80 hover:opacity-100">Contact</a>
+      </nav>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="flex-1 ml-20 md:ml-56 px-6 md:px-16 py-12 space-y-32">
+
+      <!-- Home -->
+      <section id="home" class="max-w-4xl scroll-mt-16">
+        <h1 class="text-3xl md:text-5xl font-bold leading-tight">
+          Nomadic expat, content writer <br />
+          and teacher of language in <br />
+          developing countries
+        </h1>
+        <p class="mt-6 text-gray-500 max-w-xl">
+          Enjoy my musings and follow me on a journey as I search for the
+          meaning of life through global education adventures.
+        </p>
+
+        <div class="flex gap-3 mt-10">
+          <span class="w-3 h-3 rounded-full bg-gray-300"></span>
+          <span class="w-3 h-3 rounded-full bg-red-500"></span>
+          <span class="w-3 h-3 rounded-full bg-gray-300"></span>
+        </div>
+      </section>
+
+      <!-- About -->
+      <section id="about" class="max-w-3xl scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-4">About Me</h2>
+        <p class="text-gray-600 leading-relaxed">
+          I am a traveling educator and content creator focused on global education,
+          culture, and creative technology. I have taught in multiple countries and
+          write about the intersection of learning, design, and exploration.
+        </p>
+      </section>
+
+      <!-- Projects -->
+      <section id="projects" class="scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-8">Recent Projects</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+          <div>
+            <div class="h-40 bg-gradient-to-br from-blue-200 to-purple-300 rounded-xl mb-4"></div>
+            <h3 class="font-semibold">Exploring thermal photography</h3>
+            <p class="text-sm text-gray-500">Generative AI experiments</p>
+          </div>
+          <div>
+            <div class="h-40 bg-gradient-to-br from-pink-200 to-indigo-300 rounded-xl mb-4"></div>
+            <h3 class="font-semibold">Computer generated landscapes</h3>
+            <p class="text-sm text-gray-500">Creative AI experiments</p>
+          </div>
+          <div>
+            <div class="h-40 bg-gradient-to-br from-cyan-200 to-blue-300 rounded-xl mb-4"></div>
+            <h3 class="font-semibold">Cellular micro photography</h3>
+            <p class="text-sm text-gray-500">Photography studies</p>
+          </div>
+          <div>
+            <div class="h-40 bg-gradient-to-br from-gray-200 to-gray-400 rounded-xl mb-4"></div>
+            <h3 class="font-semibold">Architectural structures</h3>
+            <p class="text-sm text-gray-500">Engineering studies</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="max-w-4xl scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-6">Blog</h2>
+        <ul class="space-y-4 text-gray-600">
+          <li>• Teaching English in remote regions of Asia</li>
+          <li>• Using AI tools for creative education</li>
+          <li>• Minimalist travel for digital nomads</li>
         </ul>
-    </nav>
+      </section>
 
-    <section id="home" class="hero">
-        <h1>Your Name</h1>
-        <p>Web Developer | Designer | Creator</p>
-        <a href="#contact" class="cta-button">Get In Touch</a>
-    </section>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <p>Hi! I'm a passionate web developer with a love for creating beautiful, functional websites. With expertise in modern web technologies, I bring ideas to life through clean code and thoughtful design. I'm always eager to learn new skills and take on exciting challenges.</p>
+      <!-- Photos -->
+      <section id="photos" class="scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-6">Photos</h2>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+          <div class="h-32 bg-gray-300 rounded-lg"></div>
+          <div class="h-32 bg-gray-300 rounded-lg"></div>
+          <div class="h-32 bg-gray-300 rounded-lg"></div>
+          <div class="h-32 bg-gray-300 rounded-lg"></div>
         </div>
-    </section>
+      </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <div class="skills-grid">
-            <div class="skill-card">
-                <div class="skill-icon">💻</div>
-                <h3>Frontend</h3>
-                <p>HTML, CSS, JavaScript</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">⚙️</div>
-                <h3>Backend</h3>
-                <p>Node.js, Python</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">🎨</div>
-                <h3>Design</h3>
-                <p>UI/UX, Figma</p>
-            </div>
-            <div class="skill-card">
-                <div class="skill-icon">📱</div>
-                <h3>Responsive</h3>
-                <p>Mobile-First Design</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-image">🚀</div>
-                <div class="project-content">
-                    <h3>Project One</h3>
-                    <p>A modern web application built with cutting-edge technologies to solve real-world problems.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-image">🎯</div>
-                <div class="project-content">
-                    <h3>Project Two</h3>
-                    <p>An interactive platform featuring smooth animations and intuitive user experience.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-image">✨</div>
-                <div class="project-content">
-                    <h3>Project Three</h3>
-                    <p>A responsive design showcase demonstrating mobile-first development principles.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form class="contact-form" onsubmit="handleSubmit(event)">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" required></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Send Message</button>
+      <!-- Contact -->
+      <section id="contact" class="max-w-xl scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-6">Contact</h2>
+        <form class="space-y-4">
+          <input type="text" placeholder="Name" class="w-full border p-3 rounded-lg" />
+          <input type="email" placeholder="Email" class="w-full border p-3 rounded-lg" />
+          <textarea placeholder="Message" class="w-full border p-3 rounded-lg h-32"></textarea>
+          <button class="px-6 py-3 bg-black text-white rounded-lg">Send Message</button>
         </form>
-    </section>
+      </section>
 
-    <script>
-        // Smooth scrolling
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                target.scrollIntoView({ behavior: 'smooth' });
-            });
-        });
-
-        // Form submission
-        function handleSubmit(e) {
-            e.preventDefault();
-            alert('Thank you for your message! This is a demo form.');
-            e.target.reset();
-        }
-
-        // Active nav highlight
-        window.addEventListener('scroll', () => {
-            const sections = document.querySelectorAll('section');
-            const navLinks = document.querySelectorAll('nav a');
-            
-            let current = '';
-            sections.forEach(section => {
-                const sectionTop = section.offsetTop;
-                const sectionHeight = section.clientHeight;
-                if (scrollY >= sectionTop - 200) {
-                    current = section.getAttribute('id');
-                }
-            });
-
-            navLinks.forEach(link => {
-                link.style.color = '';
-                if (link.getAttribute('href').slice(1) === current) {
-                    link.style.color = '#6366f1';
-                }
-            });
-        });
-    </script>
+    </main>
+  </div>
 </body>
 </html>
