--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Portfolio</title>
+  <title>David Egbuna - Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -13,14 +13,14 @@
 
     <!-- Sidebar -->
     <aside class="w-20 md:w-56 bg-black text-white flex flex-col items-center md:items-start p-4 fixed h-full">
-      <div class="w-10 h-10 rounded-full bg-red-500 mb-6"></div>
-      <h2 class="hidden md:block text-lg font-semibold mb-10">Egbuna David</h2>
+      <div class="w-10 h-10 rounded-full bg-blue-500 mb-6"></div>
+      <h2 class="hidden md:block text-lg font-semibold mb-10">David Egbuna</h2>
       <nav class="space-y-6 text-sm">
         <a href="#home" class="block opacity-80 hover:opacity-100">Home</a>
         <a href="#about" class="block opacity-80 hover:opacity-100">About</a>
-        <a href="#projects" class="block opacity-80 hover:opacity-100">Projects</a>
-        <a href="#blog" class="block opacity-80 hover:opacity-100">Blog</a>
-        <a href="#photos" class="block opacity-80 hover:opacity-100"></a>
+        <a href="#skills" class="block opacity-80 hover:opacity-100">Skills</a>
+        <a href="#interests" class="block opacity-80 hover:opacity-100">Interests</a>
+        <a href="#achievements" class="block opacity-80 hover:opacity-100">Achievements</a>
         <a href="#contact" class="block opacity-80 hover:opacity-100">Contact</a>
       </nav>
     </aside>
@@ -31,18 +31,19 @@
       <!-- Home -->
       <section id="home" class="max-w-4xl scroll-mt-16">
         <h1 class="text-3xl md:text-5xl font-bold leading-tight">
-          Nomadic expat, content writer <br />
-          and teacher of language in <br />
-          developing countries
+          Computer Systems Technology <br />
+          Student & Aspiring Computer <br />
+          Engineer
         </h1>
         <p class="mt-6 text-gray-500 max-w-xl">
-          Enjoy my musings and follow me on a journey as I search for the
-          meaning of life through global education adventures.
+          Passionate about system optimization, hardware-software integration, and 
+          building more powerful and efficient systems. Currently pursuing an Advanced 
+          Diploma at George Brown College.
         </p>
 
         <div class="flex gap-3 mt-10">
           <span class="w-3 h-3 rounded-full bg-gray-300"></span>
-          <span class="w-3 h-3 rounded-full bg-red-500"></span>
+          <span class="w-3 h-3 rounded-full bg-blue-500"></span>
           <span class="w-3 h-3 rounded-full bg-gray-300"></span>
         </div>
       </section>
@@ -50,69 +51,104 @@
       <!-- About -->
       <section id="about" class="max-w-3xl scroll-mt-16">
         <h2 class="text-2xl font-semibold mb-4">About Me</h2>
+        <p class="text-gray-600 leading-relaxed mb-4">
+          I'm a dedicated Computer Systems Technology student at George Brown College with 
+          proven academic excellence and leadership experience. Originally from Lagos, Nigeria, 
+          I moved to Toronto to pursue my passion for computer engineering and system optimization.
+        </p>
         <p class="text-gray-600 leading-relaxed">
-          I am a traveling educator and content creator focused on global education,
-          culture, and creative technology. I have taught in multiple countries and
-          write about the intersection of learning, design, and exploration.
+          As a former Senior Prefect and Ontario Scholar Award recipient, I bring strong leadership 
+          skills and a track record of academic achievement. I'm particularly interested in 
+          hardware-software integration, benchmarking, and developing innovative solutions to 
+          complex technical challenges. Currently pursuing my Cisco CCNA certification and 
+          actively seeking internship and co-op opportunities.
         </p>
       </section>
 
-      <!-- Projects -->
-      <section id="projects" class="scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-8">Recent Projects</h2>
+      <!-- Skills -->
+      <section id="skills" class="scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-8">Technical Skills & Projects</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
           <div>
-            <div class="h-40 bg-gradient-to-br from-blue-200 to-purple-300 rounded-xl mb-4"></div>
-            <h3 class="font-semibold">Exploring thermal photography</h3>
-            <p class="text-sm text-gray-500">Generative AI experiments</p>
+            <div class="h-40 bg-gradient-to-br from-blue-400 to-blue-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">{ }</div>
+            <h3 class="font-semibold">Programming</h3>
+            <p class="text-sm text-gray-500">Python, C++, HTML/CSS</p>
           </div>
           <div>
-            <div class="h-40 bg-gradient-to-br from-pink-200 to-indigo-300 rounded-xl mb-4"></div>
-            <h3 class="font-semibold">Computer generated landscapes</h3>
-            <p class="text-sm text-gray-500">Creative AI experiments</p>
+            <div class="h-40 bg-gradient-to-br from-green-400 to-green-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">⚙️</div>
+            <h3 class="font-semibold">Systems & Hardware</h3>
+            <p class="text-sm text-gray-500">Computer assembly, troubleshooting, diagnostics</p>
           </div>
           <div>
-            <div class="h-40 bg-gradient-to-br from-cyan-200 to-blue-300 rounded-xl mb-4"></div>
-            <h3 class="font-semibold">Cellular micro photography</h3>
-            <p class="text-sm text-gray-500">Photography studies</p>
+            <div class="h-40 bg-gradient-to-br from-purple-400 to-purple-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">🌐</div>
+            <h3 class="font-semibold">Network Systems</h3>
+            <p class="text-sm text-gray-500">CCNA (In Progress), network configuration</p>
           </div>
           <div>
-            <div class="h-40 bg-gradient-to-br from-gray-200 to-gray-400 rounded-xl mb-4"></div>
-            <h3 class="font-semibold">Architectural structures</h3>
-            <p class="text-sm text-gray-500">Engineering studies</p>
+            <div class="h-40 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">🔧</div>
+            <h3 class="font-semibold">Development Tools</h3>
+            <p class="text-sm text-gray-500">VS Code, Git, VMware, MySQL</p>
           </div>
         </div>
       </section>
 
-      <!-- Blog -->
-      <section id="blog" class="max-w-4xl scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-6">Blog</h2>
+      <!-- Interests -->
+      <section id="interests" class="max-w-4xl scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-6">Interests & Focus Areas</h2>
         <ul class="space-y-4 text-gray-600">
-          <li>• Teaching English in remote regions of Asia</li>
-          <li>• Using AI tools for creative education</li>
-          <li>• Minimalist travel for digital nomads</li>
+          <li>• Artificial Intelligence and machine learning applications</li>
+          <li>• Performance engineering and system optimization</li>
+          <li>• Hardware-software integration and benchmarking</li>
+          <li>• Competitive gaming and esports technology</li>
+          <li>• Building efficient and powerful computing systems</li>
         </ul>
       </section>
 
-      <!-- Photos -->
-      <section id="photos" class="scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-6">Photos</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-          <div class="h-32 bg-gray-300 rounded-lg"></div>
-          <div class="h-32 bg-gray-300 rounded-lg"></div>
-          <div class="h-32 bg-gray-300 rounded-lg"></div>
-          <div class="h-32 bg-gray-300 rounded-lg"></div>
+      <!-- Achievements -->
+      <section id="achievements" class="scroll-mt-16">
+        <h2 class="text-2xl font-semibold mb-6">Achievements & Recognition</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="border border-gray-200 rounded-lg p-6">
+            <h3 class="font-semibold mb-2">🎓 Academic Excellence</h3>
+            <ul class="text-sm text-gray-600 space-y-1">
+              <li>• Ontario Scholar Award (2024)</li>
+              <li>• Current GPA: 3.5</li>
+              <li>• Honor Roll Performance</li>
+            </ul>
+          </div>
+          <div class="border border-gray-200 rounded-lg p-6">
+            <h3 class="font-semibold mb-2">🏆 Leadership</h3>
+            <ul class="text-sm text-gray-600 space-y-1">
+              <li>• Senior Prefect (2022-2023)</li>
+              <li>• Led 100+ students</li>
+              <li>• Student Leadership Finalist</li>
+            </ul>
+          </div>
+          <div class="border border-gray-200 rounded-lg p-6">
+            <h3 class="font-semibold mb-2">⚡ Athletics</h3>
+            <ul class="text-sm text-gray-600 space-y-1">
+              <li>• Track & Field Gold Medals</li>
+              <li>• Multi-sport Athlete</li>
+              <li>• Football & Volleyball</li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <!-- Contact -->
       <section id="contact" class="max-w-xl scroll-mt-16">
         <h2 class="text-2xl font-semibold mb-6">Contact</h2>
+        <div class="mb-6 space-y-3 text-gray-600">
+          <p>📧 egbunadavid201@gmail.com</p>
+          <p>📱 +1 (437) 260-4108</p>
+          <p>📍 Toronto, ON, Canada</p>
+          <p class="text-sm text-gray-500 mt-4">Open to internships, co-op programs, and part-time technical roles</p>
+        </div>
         <form class="space-y-4">
           <input type="text" placeholder="Name" class="w-full border p-3 rounded-lg" />
           <input type="email" placeholder="Email" class="w-full border p-3 rounded-lg" />
           <textarea placeholder="Message" class="w-full border p-3 rounded-lg h-32"></textarea>
-          <button class="px-6 py-3 bg-black text-white rounded-lg">Send Message</button>
+          <button class="px-6 py-3 bg-black text-white rounded-lg hover:bg-gray-800 transition">Send Message</button>
         </form>
       </section>
 
