--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
       <!-- Home -->
       <section id="home" class="max-w-4xl scroll-mt-16 min-h-[70vh] flex flex-col justify-center">
         <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-6">
-          Hi! I'm David!
+          Hey I'm David
         </h1>
         <p class="text-lg md:text-xl text-gray-600 max-w-2xl leading-relaxed">
-          Computer Systems Technology student and aspiring computer engineer passionate about
-          system optimization, hardware-software integration, and building powerful, efficient
-          computing systems. Currently pursuing an Advanced Diploma at George Brown College.
+          An aspiring computer engineer at currently studying Computer systems Technology at George brown college
         </p>
 
         <div class="flex gap-3 mt-10">
@@ -50,8 +48,7 @@
       <section id="about" class="max-w-3xl scroll-mt-16">
         <h2 class="text-2xl font-semibold mb-4">About Me</h2>
         <p class="text-gray-600 leading-relaxed mb-4">
-          I'm a dedicated Computer Systems Technology student at George Brown College with 
-          proven academic excellence and leadership experience. Originally from Lagos, Nigeria, 
+           Originally from Lagos, Nigeria, 
           I moved to Toronto to pursue my passion for computer engineering and system optimization.
         </p>
         <p class="text-gray-600 leading-relaxed">
