--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="font-[Inter] bg-white text-gray-900">
+<body class="font-[Inter] bg-gradient-to-br from-slate-950 via-slate-900 to-black text-white">
   <div class="flex min-h-screen">
 
     <!-- Sidebar -->
