--- a/index.html
+++ b/index.html
@@ -12,46 +12,51 @@
   <div class="flex min-h-screen">
 
     <!-- Sidebar -->
-    <aside class="w-20 md:w-56 bg-black text-white flex flex-col items-center md:items-start p-4 fixed h-full">
-      <div class="w-10 h-10 rounded-full bg-blue-500 mb-6"></div>
+    <aside class="w-20 md:w-56 bg-black/80 backdrop-blur text-white flex flex-col items-center md:items-start p-4 fixed h-full border-r border-white/10">
+      <div class="w-10 h-10 rounded-full bg-gradient-to-r from-blue-500 to-cyan-400 mb-6"></div>
       <h2 class="hidden md:block text-lg font-semibold mb-10">David Egbuna</h2>
       <nav class="space-y-6 text-sm">
-        <a href="#home" class="block opacity-80 hover:opacity-100">Home</a>
-        <a href="#about" class="block opacity-80 hover:opacity-100">About</a>
-        <a href="#skills" class="block opacity-80 hover:opacity-100">Skills</a>
-        <a href="#interests" class="block opacity-80 hover:opacity-100">Interests</a>
-        <a href="#achievements" class="block opacity-80 hover:opacity-100">Achievements</a>
-        <a href="#contact" class="block opacity-80 hover:opacity-100">Contact</a>
+        <a href="#home" class="block text-white/70 hover:text-white">Home</a>
+        <a href="#about" class="block text-white/70 hover:text-white">About</a>
+        <a href="#skills" class="block text-white/70 hover:text-white">Skills</a>
+        <a href="#interests" class="block text-white/70 hover:text-white">Interests</a>
+        <a href="#achievements" class="block text-white/70 hover:text-white">Achievements</a>
+        <a href="#contact" class="block text-white/70 hover:text-white">Contact</a>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-1 ml-20 md:ml-56 px-6 md:px-16 py-12 space-y-32">
+    <main class="flex-1 ml-20 md:ml-56 px-6 md:px-16 py-12 space-y-40">
 
-      <!-- Home -->
-      <section id="home" class="max-w-4xl scroll-mt-16 min-h-[70vh] flex flex-col justify-center">
-        <h1 class="text-5xl md:text-7xl font-bold leading-tight mb-6">
-          Hey I'm David
+      <!-- HOME (Redesigned Hero) -->
+      <section id="home" class="max-w-5xl min-h-[85vh] flex flex-col justify-center scroll-mt-16">
+        <span class="text-blue-400 tracking-widest uppercase text-sm mb-4">Computer Systems Technology</span>
+
+        <h1 class="text-5xl md:text-7xl font-bold leading-tight bg-gradient-to-r from-white via-blue-200 to-cyan-300 bg-clip-text text-transparent mb-8">
+          Hey, I'm David
         </h1>
-        <p class="text-lg md:text-xl text-gray-600 max-w-2xl leading-relaxed">
-          An aspiring computer engineer at currently studying Computer systems Technology at George brown college
+
+        <p class="text-lg md:text-xl text-white/70 max-w-2xl leading-relaxed mb-12">
+          An aspiring computer engineer currently studying Computer Systems Technology at George Brown College, focused on performance engineering, networking, and hardware-software integration.
         </p>
 
-        <div class="flex gap-3 mt-10">
-          <span class="w-3 h-3 rounded-full bg-gray-300"></span>
-          <span class="w-3 h-3 rounded-full bg-blue-500"></span>
-          <span class="w-3 h-3 rounded-full bg-gray-300"></span>
+        <div class="flex gap-6">
+          <a href="#contact" class="px-7 py-3 bg-blue-500 hover:bg-blue-600 rounded-xl text-white font-medium transition shadow-lg shadow-blue-500/30">
+            Contact Me
+          </a>
+          <a href="#skills" class="px-7 py-3 border border-white/20 hover:bg-white/10 rounded-xl text-white/90 transition">
+            View Skills
+          </a>
         </div>
       </section>
 
       <!-- About -->
       <section id="about" class="max-w-3xl scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-4">About Me</h2>
-        <p class="text-gray-600 leading-relaxed mb-4">
-           Originally from Lagos, Nigeria, 
-          I moved to Toronto to pursue my passion for computer engineering and system optimization.
+        <h2 class="text-2xl font-semibold mb-4 text-blue-300">About Me</h2>
+        <p class="text-white/70 leading-relaxed mb-4">
+          Originally from Lagos, Nigeria, I moved to Toronto to pursue my passion for computer engineering and system optimization.
         </p>
-        <p class="text-gray-600 leading-relaxed">
+        <p class="text-white/70 leading-relaxed">
           As a former Senior Prefect and Ontario Scholar Award recipient, I bring strong leadership 
           skills and a track record of academic achievement. I'm particularly interested in 
           hardware-software integration, benchmarking, and developing innovative solutions to 
@@ -62,88 +67,87 @@
 
       <!-- Skills -->
       <section id="skills" class="scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-8">Technical Skills & Projects</h2>
+        <h2 class="text-2xl font-semibold mb-10 text-blue-300">Technical Skills</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-          <div>
-            <div class="h-40 bg-gradient-to-br from-blue-400 to-blue-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">{ }</div>
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+            <div class="text-4xl mb-4 text-blue-400">{ }</div>
             <h3 class="font-semibold">Programming</h3>
-            <p class="text-sm text-gray-500">Python, C++, HTML/CSS</p>
+            <p class="text-sm text-white/60">Python, C++, HTML/CSS</p>
           </div>
-          <div>
-            <div class="h-40 bg-gradient-to-br from-green-400 to-green-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">⚙️</div>
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+            <div class="text-4xl mb-4 text-green-400">⚙️</div>
             <h3 class="font-semibold">Systems & Hardware</h3>
-            <p class="text-sm text-gray-500">Computer assembly, troubleshooting, diagnostics</p>
+            <p class="text-sm text-white/60">Assembly, troubleshooting, diagnostics</p>
           </div>
-          <div>
-            <div class="h-40 bg-gradient-to-br from-purple-400 to-purple-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">🌐</div>
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+            <div class="text-4xl mb-4 text-purple-400">🌐</div>
             <h3 class="font-semibold">Network Systems</h3>
-            <p class="text-sm text-gray-500">CCNA (In Progress), network configuration</p>
+            <p class="text-sm text-white/60">CCNA (In Progress), configuration</p>
           </div>
-          <div>
-            <div class="h-40 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl mb-4 flex items-center justify-center text-white text-4xl font-bold">🔧</div>
-            <h3 class="font-semibold">Development Tools</h3>
-            <p class="text-sm text-gray-500">VS Code, Git, VMware, MySQL</p>
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+            <div class="text-4xl mb-4 text-orange-400">🔧</div>
+            <h3 class="font-semibold">Dev Tools</h3>
+            <p class="text-sm text-white/60">Git, VMware, MySQL</p>
           </div>
+
         </div>
       </section>
 
       <!-- Interests -->
       <section id="interests" class="max-w-4xl scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-6">Interests & Focus Areas</h2>
-        <ul class="space-y-4 text-gray-600">
-          <li>• Artificial Intelligence and machine learning applications</li>
-          <li>• Performance engineering and system optimization</li>
-          <li>• Hardware-software integration and benchmarking</li>
-          <li>• Competitive gaming and esports technology</li>
-          <li>• Building efficient and powerful computing systems</li>
+        <h2 class="text-2xl font-semibold mb-6 text-blue-300">Interests & Focus Areas</h2>
+        <ul class="space-y-3 text-white/70">
+          <li>• Artificial Intelligence and machine learning</li>
+          <li>• Performance engineering and optimization</li>
+          <li>• Hardware-software integration</li>
+          <li>• Competitive gaming & esports tech</li>
+          <li>• High-performance computing systems</li>
         </ul>
       </section>
 
       <!-- Achievements -->
       <section id="achievements" class="scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-6">Achievements & Recognition</h2>
+        <h2 class="text-2xl font-semibold mb-8 text-blue-300">Achievements</h2>
+
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-          <div class="border border-gray-200 rounded-lg p-6">
-            <h3 class="font-semibold mb-2">🎓 Academic Excellence</h3>
-            <ul class="text-sm text-gray-600 space-y-1">
-              <li>• Ontario Scholar Award (2024)</li>
-              <li>• Current GPA: 3.5</li>
-              <li>• Honor Roll Performance</li>
-            </ul>
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
+            <h3 class="font-semibold mb-2">🎓 Academic</h3>
+            <p class="text-sm text-white/60">Ontario Scholar, GPA 3.5</p>
           </div>
-          <div class="border border-gray-200 rounded-lg p-6">
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
             <h3 class="font-semibold mb-2">🏆 Leadership</h3>
-            <ul class="text-sm text-gray-600 space-y-1">
-              <li>• Senior Prefect (2022-2023)</li>
-              <li>• Led 100+ students</li>
-              <li>• Student Leadership Finalist</li>
-            </ul>
+            <p class="text-sm text-white/60">Senior Prefect, 100+ students</p>
           </div>
-          <div class="border border-gray-200 rounded-lg p-6">
+
+          <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
             <h3 class="font-semibold mb-2">⚡ Athletics</h3>
-            <ul class="text-sm text-gray-600 space-y-1">
-              <li>• Track & Field Gold Medals</li>
-              <li>• Multi-sport Athlete</li>
-              <li>• Football & Volleyball</li>
-            </ul>
+            <p class="text-sm text-white/60">Track & Field, Multi-sport athlete</p>
           </div>
         </div>
       </section>
 
       <!-- Contact -->
       <section id="contact" class="max-w-xl scroll-mt-16">
-        <h2 class="text-2xl font-semibold mb-6">Contact</h2>
-        <div class="mb-6 space-y-3 text-gray-600">
+        <h2 class="text-2xl font-semibold mb-6 text-blue-300">Contact</h2>
+
+        <div class="space-y-3 text-white/70 mb-8">
           <p>📧 egbunadavid201@gmail.com</p>
           <p>📱 +1 (437) 260-4108</p>
           <p>📍 Toronto, ON, Canada</p>
-          <p class="text-sm text-gray-500 mt-4">Open to internships, co-op programs, and part-time technical roles</p>
         </div>
+
         <form class="space-y-4">
-          <input type="text" placeholder="Name" class="w-full border p-3 rounded-lg" />
-          <input type="email" placeholder="Email" class="w-full border p-3 rounded-lg" />
-          <textarea placeholder="Message" class="w-full border p-3 rounded-lg h-32"></textarea>
-          <button class="px-6 py-3 bg-black text-white rounded-lg hover:bg-gray-800 transition">Send Message</button>
+          <input type="text" placeholder="Name" class="w-full bg-white/10 border border-white/10 p-3 rounded-lg focus:outline-none focus:border-blue-400" />
+          <input type="email" placeholder="Email" class="w-full bg-white/10 border border-white/10 p-3 rounded-lg focus:outline-none focus:border-blue-400" />
+          <textarea placeholder="Message" class="w-full bg-white/10 border border-white/10 p-3 rounded-lg h-32 focus:outline-none focus:border-blue-400"></textarea>
+          <button class="w-full py-3 bg-blue-500 hover:bg-blue-600 rounded-xl font-medium transition">
+            Send Message
+          </button>
         </form>
       </section>
 
