--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2 class="text-2xl font-semibold mb-6 text-blue-300">Contact</h2>
 
         <div class="space-y-3 text-white/70 mb-8">
-          <p>📧 egbunadavid201@gmail.com</p>
+          <p>📧 awelegbuna@gmail.com</p>
           <p>📱 +1 (437) 260-4108</p>
           <p>📍 Toronto, ON, Canada</p>
         </div>
