--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
-            <h3 class="font-semibold mb-2">🎓 Academic</h3>
-            <p class="text-sm text-white/60">Ontario Scholar, GPA 3.5</p>
+            <h3 class="font-semibold mb-2">🎓 Certification and Professional Development</h3>
+            <p class="text-sm text-white/60">Examination etificates, WAEC(West African Examination Council),
+            GCE(Genral Certification Exam, OSSD,Ontario Scholar</p>
           </div>
 
           <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
