--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
       <section id="interests" class="max-w-4xl scroll-mt-16">
         <h2 class="text-2xl font-semibold mb-6 text-blue-300">Interests & Focus Areas</h2>
         <ul class="space-y-3 text-white/70">
-          <li>• Artificial Intelligence and machine learning</li>
-          <li>• Performance engineering and optimization</li>
+          <li>• Systems and hardware optimization</li>
           <li>• Hardware-software integration</li>
-          <li>• Competitive gaming & esports tech</li>
-          <li>• High-performance computing systems</li>
+          <li>• Competitive, A list Gaming & esports tech</li>
+          <li>• Computer Assembly & Troubleshooting</li>
+          <li>  Hardware Diagnostics and Repair</li>
+          <li>  Nvidia Technology</li>
         </ul>
       </section>
 
