--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           <li>• Hardware-software integration</li>
           <li>• Competitive, A list Gaming & esports tech</li>
           <li>• Computer Assembly & Troubleshooting</li>
-          <li>  Hardware Diagnostics and Repair</li>
-          <li>  Nvidia Technology</li>
+          <li>• Hardware Diagnostics and Repair</li>
+          <li>• Nvidia Technology</li>
         </ul>
       </section>
 
