--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <h2 class="text-2xl font-semibold mb-8 text-blue-300">Achievements</h2>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-          <div class="p-6 rounded-2xl bg-white/5 border border-white/10">
-            <h3 class="font-semibold mb-2">🎓 Certification and Professional Development</h3>
-            <p class="text-sm text-white/60">Examination etificates, WAEC(West African Examination Council),
-            GCE(Genral Certification Exam, OSSD,Ontario Scholar</p>
-          </div>
-        </div>
+  <div class="md:col-span-3 p-6 rounded-2xl bg-white/5 border border-white/10">
+    <h3 class="font-semibold mb-2">🎓 Certification and Professional Development</h3>
+    <p class="text-sm text-white/60">Examination certificates, WAEC(West African Examination Council),
+    GCE(General Certification Exam), OSSD, Ontario Scholar</p>
+  </div>
+</div>
       </section>
 
       <!-- Contact -->
