--- a/index.html
+++ b/index.html
@@ -123,6 +123,47 @@
 </div>
       </section>
 
+      <!-- Documents Page -->
+<section id="documents" class="max-w-5xl scroll-mt-16">
+<h2 class="text-3xl font-semibold mb-8 text-blue-300">Academic Transcripts & Certificates</h2>
+
+
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+<!-- High School Transcript -->
+<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+<h3 class="font-semibold mb-2">High School Transcript</h3>
+<p class="text-sm text-white/60 mb-4">Official secondary school academic record (PDF)</p>
+<a href="files/HS-Transcript.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+</div>
+
+
+<!-- Certificate 1 -->
+<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+<h3 class="font-semibold mb-2">Ontario Scholar Award</h3>
+<p class="text-sm text-white/60 mb-4">Academic excellence recognition certificate</p>
+<a href="files/Ontario-Scholar.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+</div>
+
+
+<!-- Certificate 2 -->
+<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+<h3 class="font-semibold mb-2">Leadership Certificate</h3>
+<p class="text-sm text-white/60 mb-4">Senior Prefect leadership recognition</p>
+<a href="files/Leadership-Certificate.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+</div>
+
+
+<!-- Certificate 3 -->
+<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+<h3 class="font-semibold mb-2">CCNA (In Progress)</h3>
+<p class="text-sm text-white/60 mb-4">Networking certification progress proof</p>
+<a href="files/CCNA-Progress.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+</div>
+
+
+</div>
+</section>
+
       <!-- Contact -->
       <section id="contact" class="max-w-xl scroll-mt-16">
         <h2 class="text-2xl font-semibold mb-6 text-blue-300">Contact</h2>
