--- a/index.html
+++ b/index.html
@@ -133,31 +133,21 @@
 <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
 <h3 class="font-semibold mb-2">High School Transcript</h3>
 <p class="text-sm text-white/60 mb-4">Official secondary school academic record (PDF)</p>
-<a href="files/HS-Transcript.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+<a href="files/HS Transcript.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
 </div>
 
 
-<!-- Certificate 1 -->
 <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
 <h3 class="font-semibold mb-2">Ontario Scholar Award</h3>
 <p class="text-sm text-white/60 mb-4">Academic excellence recognition certificate</p>
-<a href="files/Ontario-Scholar.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+<a href="files/Ontario Scholar Award.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
 </div>
-
-
-<!-- Certificate 2 -->
-<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
-<h3 class="font-semibold mb-2">Leadership Certificate</h3>
-<p class="text-sm text-white/60 mb-4">Senior Prefect leadership recognition</p>
-<a href="files/Leadership-Certificate.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
-</div>
-
 
 <!-- Certificate 3 -->
 <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
-<h3 class="font-semibold mb-2">CCNA (In Progress)</h3>
-<p class="text-sm text-white/60 mb-4">Networking certification progress proof</p>
-<a href="files/CCNA-Progress.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+<h3 class="font-semibold mb-2">OSSD Transcript</h3>
+<p class="text-sm text-white/60 mb-4">Ontario SS Diploma</p>
+<a href="files/Ontario SS Diploma.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
 </div>
 
 
