--- a/index.html
+++ b/index.html
@@ -145,11 +145,16 @@
 
 <!-- Certificate 3 -->
 <div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
-<h3 class="font-semibold mb-2">OSSD Transcript</h3>
+<h3 class="font-semibold mb-2">OSSD</h3>
 <p class="text-sm text-white/60 mb-4">Ontario SS Diploma</p>
 <a href="files/Ontario SS Diploma.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
 </div>
 
+<div class="p-6 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 transition">
+<h3 class="font-semibold mb-2">OSSD Transcript</h3>
+<p class="text-sm text-white/60 mb-4">Ontario SS Transcript</p>
+<a href="files/GLCT Transcript.pdf" target="_blank" class="inline-block px-5 py-2 bg-blue-500 hover:bg-blue-600 rounded-lg text-white text-sm transition">View PDF</a>
+</div>
 
 </div>
 </section>
